--- a/assets/project_metas.json
+++ b/assets/project_metas.json
@@ -22,7 +22,7 @@
     },
     {
       "title": "another project",
-      "subtitle": "where i would put a project if i had one",
+      "subtitle": "where i would put a project IF I HAD ONE",
       "link": "https://frojo.itch.io/loops"
     },
     {
@@ -31,7 +31,7 @@
     },
     {
       "title": "another project",
-      "subtitle": "where i would put a project if i had one",
+      "subtitle": "where i would put a project IF I HAD ONE",
       "link": "https://frojo.itch.io/loops"
     },
     {
