--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
