--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/frojo/website#readme",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "typescript": "^4.1.2"
   },
   "dependencies": {
