some work shrug

--- a/assets/project_metas.json
+++ b/assets/project_metas.json
@@ -9,7 +9,7 @@
     {
       "title": "a summer afternoon in bloomfield",
       "subtitle": "a love letter to the neighborhood",
-      "link": "https://frojo.itch.io/bloomfield"
+      "link": "https://frojo.itch.io/a-summer-afternoon-in-bloomfield"
     },
     {
       "title": "loops",
