fix styling things

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "classnames": "^2.2.6",
     "favicon.js": "^1.0.0",
     "p5": "^1.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-p5-wrapper": "^2.3.0",
     "react-router-dom": "^5.2.0",
