--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "dateformat": "^4.4.1",
     "favicon.js": "^1.0.0",
     "p5": "^1.2.0",
     "prop-types": "^15.7.2",
