i hope i didn't break anythingin in act of despration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,14 @@
     "rootDir": "./src",
     "incremental": true,
     "experimentalDecorators": true,
-    "lib": ["dom", "es2015"]
-  }
+    "lib": ["dom", "es2015"],
+
+
+    
+    "baseUrl": "./src",
+    "paths": {
+      "~*": ["./*"]
+    }
+  },
+  "include": ["src/**/*"]
 }
