--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "secrets are fun",
   "main": "index.js",
   "scripts": {
-    "start": "parcel develop index.html",
+    "start": "parcel index.html",
     "build-gh": "parcel build index.html -d docs --public-url ./",
-    "build": "parcel build index.html -d docs",
+    "build-dev": "parcel build index.html -d docs-dev",
+    "start-build": "ts-node-dev server/serve.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,8 +22,10 @@
   },
   "homepage": "https://github.com/frojo/website#readme",
   "devDependencies": {
+    "@types/node": "^14.14.20",
     "cssnano": "^4.1.10",
-    "typescript": "^4.1.2"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "classnames": "^2.2.6",
