--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.9",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20"
   }
 }
